; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kvm/extr_e500_tlb.c_kvmppc_mmu_map.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kvm/extr_e500_tlb.c_kvmppc_mmu_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }
%struct.kvmppc_vcpu_e500 = type { %struct.tlbe** }
%struct.tlbe = type { i32 }

@PAGE_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kvmppc_mmu_map(%struct.kvm_vcpu* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.kvm_vcpu*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.kvmppc_vcpu_e500*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.tlbe*, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %16 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %5, align 8
  %17 = call %struct.kvmppc_vcpu_e500* @to_e500(%struct.kvm_vcpu* %16)
  store %struct.kvmppc_vcpu_e500* %17, %struct.kvmppc_vcpu_e500** %9, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @tlbsel_of(i32 %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @esel_of(i32 %20)
  store i32 %21, i32* %11, align 4
  %22 = load i32, i32* %10, align 4
  switch i32 %22, label %44 [
    i32 0, label %23
    i32 1, label %25
  ]

23:                                               ; preds = %4
  store i32 0, i32* %12, align 4
  %24 = load i32, i32* %11, align 4
  store i32 %24, i32* %13, align 4
  br label %46

25:                                               ; preds = %4
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* @PAGE_SHIFT, align 4
  %28 = ashr i32 %26, %27
  store i32 %28, i32* %14, align 4
  %29 = load %struct.kvmppc_vcpu_e500*, %struct.kvmppc_vcpu_e500** %9, align 8
  %30 = getelementptr inbounds %struct.kvmppc_vcpu_e500, %struct.kvmppc_vcpu_e500* %29, i32 0, i32 0
  %31 = load %struct.tlbe**, %struct.tlbe*** %30, align 8
  %32 = load i32, i32* %10, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.tlbe*, %struct.tlbe** %31, i64 %33
  %35 = load %struct.tlbe*, %struct.tlbe** %34, align 8
  %36 = load i32, i32* %11, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds %struct.tlbe, %struct.tlbe* %35, i64 %37
  store %struct.tlbe* %38, %struct.tlbe** %15, align 8
  store i32 1, i32* %12, align 4
  %39 = load %struct.kvmppc_vcpu_e500*, %struct.kvmppc_vcpu_e500** %9, align 8
  %40 = load i32, i32* %6, align 4
  %41 = load i32, i32* %14, align 4
  %42 = load %struct.tlbe*, %struct.tlbe** %15, align 8
  %43 = call i32 @kvmppc_e500_tlb1_map(%struct.kvmppc_vcpu_e500* %39, i32 %40, i32 %41, %struct.tlbe* %42)
  store i32 %43, i32* %13, align 4
  br label %46

44:                                               ; preds = %4
  %45 = call i32 (...) @BUG()
  br label %46

46:                                               ; preds = %44, %25, %23
  %47 = load %struct.kvmppc_vcpu_e500*, %struct.kvmppc_vcpu_e500** %9, align 8
  %48 = load i32, i32* %12, align 4
  %49 = load i32, i32* %13, align 4
  %50 = call i32 @write_host_tlbe(%struct.kvmppc_vcpu_e500* %47, i32 %48, i32 %49)
  ret void
}

declare dso_local %struct.kvmppc_vcpu_e500* @to_e500(%struct.kvm_vcpu*) #1

declare dso_local i32 @tlbsel_of(i32) #1

declare dso_local i32 @esel_of(i32) #1

declare dso_local i32 @kvmppc_e500_tlb1_map(%struct.kvmppc_vcpu_e500*, i32, i32, %struct.tlbe*) #1

declare dso_local i32 @BUG(...) #1

declare dso_local i32 @write_host_tlbe(%struct.kvmppc_vcpu_e500*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
